--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,15 @@ h6,
   visibility: visible;
 }
 
+.see-more {
+  text-align: right;
+}
+
+.see-more-text {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-decoration: underline;
+}
+
 .testimonial-wrap {
   padding: 50px 50px 80px 50px;
   background: #eceff2;
